Updated the table spacing for mobile responsiveness in weapon_tables, accessories_tables, helmet_tables, ranged_tables, and torso_tables .html files.

--- a/nioh2/tools/temper_tables/weapon_tables.html
+++ b/nioh2/tools/temper_tables/weapon_tables.html
@@ -321,8 +321,8 @@
             Break Attributes
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Break Attributes</h3>
-            <div class="overflow-hidden rounded-xl">
-                <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
+                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
                     ========== -->
@@ -370,8 +370,8 @@
             Imbue Element Attributes
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Imbue Element Attributes</h3>
-            <div class="overflow-hidden rounded-xl">
-                <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
+                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
                     ========== -->
@@ -431,8 +431,8 @@
             Random Drop / Forge Only
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Random Drop / Forge Only <span class="text-red-600">(Conflicts with other Imbue Stats)</span></h3>
-            <div class="overflow-hidden rounded-xl">
-                <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
+                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header 
                     ========== -->
@@ -500,8 +500,8 @@
             Life Drain Attributes
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Life Drain Attributes</h3>
-            <div class="overflow-hidden rounded-xl">
-                <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
+                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header 
                     ========== -->
@@ -591,8 +591,8 @@
             Attack Ki Consumption Attributes
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Attack Ki Consumption Attributes</h3>
-            <div class="overflow-hidden rounded-xl">
-                <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
+                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
                     ========== -->
@@ -652,8 +652,8 @@
             Guard Ki Consumption Attributes
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Guard Ki Consumption Attributes</h3>
-            <div class="overflow-hidden rounded-xl">
-                <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
+                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
                     ========== -->
@@ -701,8 +701,8 @@
             Damage Attributes
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Damage Attributes</h3>
-            <div class="overflow-hidden rounded-xl">
-                <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
+                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
                     ========== -->
@@ -834,8 +834,8 @@
             Ki Damage Attributes
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Ki Damage Attributes</h3>
-            <div class="overflow-hidden rounded-xl">
-                <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
+                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
                     ========== -->
@@ -889,8 +889,8 @@
             Other Damage Attributes
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Other Damage Attributes</h3>
-            <div class="overflow-hidden rounded-xl">
-                <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
+                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
                     ========== -->
@@ -932,8 +932,8 @@
             Skill Name Attributes
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Skill Name Attributes</h3>
-            <div class="overflow-hidden rounded-xl">
-                <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
+                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
                     ========== -->
@@ -987,8 +987,8 @@
             Moonlit Snow Attributes
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Moonlit Snow Attributes (Odachi Only)</h3>
-            <div class="overflow-hidden rounded-xl">
-                <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
+                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
                     ========== -->
@@ -1068,8 +1068,8 @@
             No Conflict
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">No Conflict</h3>
-            <div class="overflow-hidden rounded-xl">
-                <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
+                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
                     ========== -->
@@ -1173,8 +1173,8 @@
             Life Drain Attributes
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Life Drain Attributes</h3>
-            <div class="overflow-hidden rounded-xl">
-                <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
+                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
                     ========== -->
@@ -1213,8 +1213,8 @@
             Damage Attributes
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Damage Attributes</h3>
-            <div class="overflow-hidden rounded-xl">
-                <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
+                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
                     ========== -->
@@ -1353,8 +1353,8 @@
             Ki Damage Attributes
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Ki Damage Attributes</h3>
-            <div class="overflow-hidden rounded-xl">
-                <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
+                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
                     ========== -->
@@ -1402,8 +1402,8 @@
             Other Damage Attributes
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Other Damage Attributes</h3>
-            <div class="overflow-hidden rounded-xl">
-                <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
+                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
                     ========== -->
@@ -1451,8 +1451,8 @@
             No Conflict
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">No Conflict</h3>
-            <div class="overflow-hidden rounded-xl">
-                <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
+                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
                     ========== -->
