--- a/nioh2/tools/temper_tables/helmet_tables.html
+++ b/nioh2/tools/temper_tables/helmet_tables.html
@@ -273,7 +273,7 @@
             Sensor Attributes
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Sensor Attributes</h3>
-            <div class="overflow-hidden rounded-xl">
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
                 <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
@@ -328,7 +328,7 @@
             Resistance Attributes
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Resistance Attributes</h3>
-            <div class="overflow-hidden rounded-xl">
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
                 <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
@@ -389,7 +389,7 @@
             Jutsu Power Attributes
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Jutsu Power Attributes</h3>
-            <div class="overflow-hidden rounded-xl">
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
                 <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
@@ -432,7 +432,7 @@
             No Conflict
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">No Conflict</h3>
-            <div class="overflow-hidden rounded-xl">
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
                 <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
@@ -597,7 +597,7 @@
             Damage Attributes
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Damage Attributes</h3>
-            <div class="overflow-hidden rounded-xl">
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
                 <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
@@ -742,7 +742,7 @@
             Ki Damage Attributes
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Ki Damage Attributes</h3>
-            <div class="overflow-hidden rounded-xl">
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
                 <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
@@ -847,7 +847,7 @@
             Damage Attributes
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Damage Attributes</h3>
-            <div class="overflow-hidden rounded-xl">
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
                 <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
@@ -1058,7 +1058,7 @@
             Ki Damage Attributes
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Ki Damage Attributes</h3>
-            <div class="overflow-hidden rounded-xl">
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
                 <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
@@ -1149,7 +1149,7 @@
             Jutsu Power Attributes
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Jutsu Power Attributes</h3>
-            <div class="overflow-hidden rounded-xl">
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
                 <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
@@ -1198,7 +1198,7 @@
             No Conflict
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">No Conflict</h3>
-            <div class="overflow-hidden rounded-xl">
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
                 <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
