--- a/nioh2/tools/temper_tables/ranged_tables.html
+++ b/nioh2/tools/temper_tables/ranged_tables.html
@@ -272,7 +272,7 @@
             Equipment Drop Rate Attributes
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Equipment Drop Rate Attributes</h3>
-            <div class="overflow-hidden rounded-xl">
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
                 <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
@@ -315,7 +315,7 @@
             Item Drop Rate Attributes
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Item Drop Rate Attributes</h3>
-            <div class="overflow-hidden rounded-xl">
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
                 <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
@@ -358,7 +358,7 @@
             Damage Attributes
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Damage Attributes</h3>
-            <div class="overflow-hidden rounded-xl">
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
                 <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
@@ -407,7 +407,7 @@
             Damage Bonus Attributes
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Damage Bonus Attributes</h3>
-            <div class="overflow-hidden rounded-xl">
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
                 <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
@@ -480,7 +480,7 @@
             No Conflict
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">No Conflict</h3>
-            <div class="overflow-hidden rounded-xl">
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
                 <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
@@ -657,7 +657,7 @@
             No Conflict
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">No Conflict</h3>
-            <div class="overflow-hidden rounded-xl">
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
                 <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
