--- a/nioh2/tools/temper_tables/torso_tables.html
+++ b/nioh2/tools/temper_tables/torso_tables.html
@@ -273,7 +273,7 @@
             Jutsu Power Attributes
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Jutsu Power Attributes</h3>
-            <div class="overflow-hidden rounded-xl">
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
                 <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
@@ -316,7 +316,7 @@
             Untouched Jutsu Attributes
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Untouched Jutsu Attributes</h3>
-            <div class="overflow-hidden rounded-xl">
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
                 <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
@@ -359,7 +359,7 @@
             Resistance Attributes
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Resistance Attributes</h3>
-            <div class="overflow-hidden rounded-xl">
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
                 <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
@@ -426,7 +426,7 @@
             No Conflict
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">No Conflict</h3>
-            <div class="overflow-hidden rounded-xl">
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
                 <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
@@ -579,7 +579,7 @@
             Damage Attributes
             ========== -->
             <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Damage Attributes</h3>
-            <div class="overflow-hidden rounded-xl">
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
                 <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
                     Header
