--- a/nioh2/tools/temper_tables/torso_tables.html
+++ b/nioh2/tools/temper_tables/torso_tables.html
@@ -602,7 +602,33 @@
                     <!-- ==========
                     Table Data
                     ========== -->
-
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>
+                            <span class="text-uncommon-text-color">Melee Damage</span>
+                            <span class="text-red-500">(Light Armor)</span>
+                        </td>
+                        <td>3.9 %</td>
+                        <td>4.9 %</td>
+                        <td>No</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>
+                            <span class="text-uncommon-text-color">Melee Damage</span>
+                            <span class="text-red-500">Medium Armor</span>
+                        </td>
+                        <td>3.4 %</td>
+                        <td>4.4 %</td>
+                        <td>No</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>
+                            <span class="text-uncommon-text-color">Melee Damage</span>
+                            <span class="text-red-500">(Heavy Armor)</span>
+                        </td>
+                        <td>2.9 %</td>
+                        <td>3.9 %</td>
+                        <td>No</td>
+                    </tr>
                 </table>
             </div>
         </div>
