--- a/nioh2/tools/temper_tables/temper_tables_index.html
+++ b/nioh2/tools/temper_tables/temper_tables_index.html
@@ -200,11 +200,9 @@
             </div>
         </div>
 
-        <!-- 
-        ========== ========== ==========
+        <!-- ========== ========== ==========
         Mobile Only Menu (Navbar)
-        ========== ========== ==========
-        -->
+        ========== ========== ========== -->
         <div id="mobile-menu" class="absolute top-0 bg-medium-gray w-full text-4xl flex-col justify-center
             origin-top animate-open-menu hidden">
 
@@ -301,7 +299,7 @@
                 Gloves Temper Table (Button 6)
                 ========== -->
                 <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
-                    href="">
+                    href="./gloves_tables.html">
                     <img class="" src="./img/gloves_icon.png" alt="Gloves icon">
                     <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
                         group-hover:text-yellow-100 group-hover:bg-light-red">Gloves Temper Table</span>
