--- a/nioh2/tools/temper_tables/gloves_tables.html
+++ b/nioh2/tools/temper_tables/gloves_tables.html
@@ -267,7 +267,8 @@
 
                 <span class="bold-text">Nioh Community Discord Server: 
                     <a class="text-sky-400 hover:text-sky-600" href="https://discord.gg/pAH5U9mRBj" 
-                    target="_blank" rel="noopener noreferrer">Here</a></span>
+                    target="_blank" rel="noopener noreferrer">Here</a>
+                </span>
             </div>
         </div>
     </section>
