Added more content to gloves_tables.html.

--- a/nioh2/tools/temper_tables/gloves_tables.html
+++ b/nioh2/tools/temper_tables/gloves_tables.html
@@ -250,6 +250,112 @@
 
 
     <!-- ========== ========== ========== ========== ==========
+    Standard Gear Attribute Tables
+    ========== ========== ========== ========== ========== -->
+    <section class="w-full my-12 lg:px-0 flex flex-col items-center">
+        <div class="w-full px-2 py-6 flex flex-col items-center gap-6 rounded
+            2xl:max-w-section-width lg:px-16">
+
+            <!-- ==========
+            section header
+            ========== -->
+            <h2 id="standard-gear" class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Standard Gear Attribute Tables</h2>
+            <hr class="w-full h-[2px] bg-stone-600 border-0">
+
+            <p class="px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
+                Attributes within a table conflict with other attributes in that same table. Attributes in the No Conflict Table 
+                do not conflict with each other. 
+            </p>
+
+            <!-- ==========
+            Jutsu Power Attributes
+            ========== -->
+            <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Jutsu Power Attributes</h3>
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
+                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+                    <!-- ==========
+                    Header
+                    ========== -->
+                    <tr>
+                        <th rowspan="2">Attribute</th>
+                        <th colspan="2">Familiarity</th>
+                        <th rowspan="2">
+                            <div class="flex flex-col items-center gap-1">
+                                Inheritable ?
+                                <img src="./img/inherit_icon.png" alt="inherit icon">
+                            </div>
+                        </th>
+                    </tr>
+                    <tr>
+                        <th>0</th>
+                        <th>999</th>
+                    </tr>
+
+                    <!-- ==========
+                    Table Data
+                    ========== -->
+                    <tr class="odd:bg-dark-gray-2">
+                        <td><span class="text-uncommon-text-color">Ninjutsu Power</span></td>
+                        <td>5</td>
+                        <td>6</td>
+                        <td>Yes</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td><span class="text-uncommon-text-color">Onmyo Magic Power</span></td>
+                        <td>5</td>
+                        <td>6</td>
+                        <td>Yes</td>
+                    </tr>
+                </table>
+            </div>
+
+
+            <!-- ==========
+            Untouched Jutsu Attributes
+            ========== -->
+            <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Jutsu Power Attributes</h3>
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
+                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+                    <!-- ==========
+                    Header
+                    ========== -->
+                    <tr>
+                        <th rowspan="2">Attribute</th>
+                        <th colspan="2">Familiarity</th>
+                        <th rowspan="2">
+                            <div class="flex flex-col items-center gap-1">
+                                Inheritable ?
+                                <img src="./img/inherit_icon.png" alt="inherit icon">
+                            </div>
+                        </th>
+                    </tr>
+                    <tr>
+                        <th>0</th>
+                        <th>999</th>
+                    </tr>
+
+                    <!-- ==========
+                    Table Data
+                    ========== -->
+                    <tr class="odd:bg-dark-gray-2">
+                        <td><span class="text-uncommon-text-color">Untouched Ninjutsu</span></td>
+                        <td>4.9%</td>
+                        <td>5.4%</td>
+                        <td>Yes</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td><span class="text-uncommon-text-color">Untouched Onmyo Magic</span></td>
+                        <td>4.9%</td>
+                        <td>5.4%</td>
+                        <td>Yes</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- ========== ========== ========== ========== ==========
     Credits
     ========== ========== ========== ========== ========== -->
     <section class="w-full my-12 flex flex-col items-center">
