Updated content in gloves_tables.html.

--- a/nioh2/tools/temper_tables/gloves_tables.html
+++ b/nioh2/tools/temper_tables/gloves_tables.html
@@ -313,7 +313,7 @@
             <!-- ==========
             Untouched Jutsu Attributes
             ========== -->
-            <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Jutsu Power Attributes</h3>
+            <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Untouched Jutsu Attributes</h3>
             <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
                 <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
                     <!-- ==========
