Added more content to gloves_tables.html.

--- a/nioh2/tools/temper_tables/gloves_tables.html
+++ b/nioh2/tools/temper_tables/gloves_tables.html
@@ -351,6 +351,110 @@
                     </tr>
                 </table>
             </div>
+
+
+            <!-- ==========
+            Resistance Attributes
+            ========== -->
+            <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Resistance Attributes</h3>
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
+                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+                    <!-- ==========
+                    Header
+                    ========== -->
+                    <tr>
+                        <th rowspan="2">Attribute</th>
+                        <th colspan="2">Familiarity</th>
+                        <th rowspan="2">
+                            <div class="flex flex-col items-center gap-1">
+                                Inheritable ?
+                                <img src="./img/inherit_icon.png" alt="inherit icon">
+                            </div>
+                        </th>
+                    </tr>
+                    <tr>
+                        <th>0</th>
+                        <th>999</th>
+                    </tr>
+
+                    <!-- ==========
+                    Table Data
+                    ========== -->
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>Fire Resistance</td>
+                        <td>2.3</td>
+                        <td>2.5</td>
+                        <td>No</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>Water Resistance</td>
+                        <td>2.3</td>
+                        <td>2.5</td>
+                        <td>No</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>Lightning Resistance</td>
+                        <td>2.3</td>
+                        <td>2.5</td>
+                        <td>No</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>Poison Resistance</td>
+                        <td>2.3</td>
+                        <td>2.5</td>
+                        <td>No</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>Paralysis Resistance</td>
+                        <td>2.3</td>
+                        <td>2.5</td>
+                        <td>No</td>
+                    </tr>
+                </table>
+            </div>
+
+
+            <!-- ==========
+            Attack Attributes
+            ========== -->
+            <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Attack Attributes</h3>
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
+                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+                    <!-- ==========
+                    Header
+                    ========== -->
+                    <tr>
+                        <th rowspan="2">Attribute</th>
+                        <th colspan="2">Familiarity</th>
+                        <th rowspan="2">
+                            <div class="flex flex-col items-center gap-1">
+                                Inheritable ?
+                                <img src="./img/inherit_icon.png" alt="inherit icon">
+                            </div>
+                        </th>
+                    </tr>
+                    <tr>
+                        <th>0</th>
+                        <th>999</th>
+                    </tr>
+
+                    <!-- ==========
+                    Table Data
+                    ========== -->
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>Increase Attack & Defense [WEAPON]</td>
+                        <td>9</td>
+                        <td>11</td>
+                        <td>No</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td><span class="text-uncommon-text-color">Attack</span></td>
+                        <td>27</td>
+                        <td>42</td>
+                        <td>Yes</td>
+                    </tr>
+                </table>
+            </div>
         </div>
     </section>
 
