--- a/nioh2/tools/temper_tables/gloves_tables.html
+++ b/nioh2/tools/temper_tables/gloves_tables.html
@@ -455,6 +455,231 @@
                     </tr>
                 </table>
             </div>
+
+
+            <!-- ==========
+            Damage Attributes
+            ========== -->
+            <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Damage Attributes</h3>
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
+                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+                    <!-- ==========
+                    Header
+                    ========== -->
+                    <tr>
+                        <th rowspan="2">Attribute</th>
+                        <th colspan="2">Familiarity</th>
+                        <th rowspan="2">
+                            <div class="flex flex-col items-center gap-1">
+                                Inheritable ?
+                                <img src="./img/inherit_icon.png" alt="inherit icon">
+                            </div>
+                        </th>
+                    </tr>
+                    <tr>
+                        <th>0</th>
+                        <th>999</th>
+                    </tr>
+
+                    <!-- ==========
+                    Table Data
+                    ========== -->
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>Bare-Handed Attack Damage</td>
+                        <td>24.9%</td>
+                        <td>34.9%</td>
+                        <td>Yes</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>
+                            [SKILL NAME] Damage
+                            <span class="text-red-500">(Light Armor)</span>
+                        </td>
+                        <td>8.9%</td>
+                        <td>9.9%</td>
+                        <td>Yes</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>[SKILL NAME] Duration</td>
+                        <td>8.9%</td>
+                        <td>9.9%</td>
+                        <td>Yes</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td><span class="text-uncommon-text-color">Damage Bonus (Unarmoured)</span></td>
+                        <td>A-</td>
+                        <td>A+</td>
+                        <td>No</td>
+                    </tr>
+                </table>
+            </div>
+
+
+            <!-- ==========
+            No Conflict
+            ========== -->
+            <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">No Conflict</h3>
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
+                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+                    <!-- ==========
+                    Header
+                    ========== -->
+                    <tr>
+                        <th rowspan="2">Attribute</th>
+                        <th colspan="2">Familiarity</th>
+                        <th rowspan="2">
+                            <div class="flex flex-col items-center gap-1">
+                                Inheritable ?
+                                <img src="./img/inherit_icon.png" alt="inherit icon">
+                            </div>
+                        </th>
+                    </tr>
+                    <tr>
+                        <th>0</th>
+                        <th>999</th>
+                    </tr>
+
+                    <!-- ==========
+                    Table Data
+                    ========== -->
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>Defense</td>
+                        <td>6</td>
+                        <td>7</td>
+                        <td>Yes</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>Toughness</td>
+                        <td>2</td>
+                        <td>7</td>
+                        <td>Yes</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>Gold Earned</td>
+                        <td>2.3%</td>
+                        <td>2.6%</td>
+                        <td>Yes</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>Amrita Earned</td>
+                        <td>1.1%</td>
+                        <td>1.2%</td>
+                        <td>Yes</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>Projectile Damage Taken</td>
+                        <td>-3.9%</td>
+                        <td>-4.3%</td>
+                        <td>Yes</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>Equipment Drop Rate Vs. Yokai</td>
+                        <td>2.9%</td>
+                        <td>3.4%</td>
+                        <td>Yes</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>Bomb Damage</td>
+                        <td>12.9%</td>
+                        <td>15.9%</td>
+                        <td>Yes</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td>Shuriken & Kunai Damage</td>
+                        <td>12.9%</td>
+                        <td>15.9%</td>
+                        <td>Yes</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td><span class="text-uncommon-text-color">Item Drop Rate</span></td>
+                        <td>3.9%</td>
+                        <td>4.4%</td>
+                        <td>Yes</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td><span class="text-uncommon-text-color">Equipment Drop Rate</span></td>
+                        <td>4.9%</td>
+                        <td>5.9%</td>
+                        <td>Yes</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td><span class="text-uncommon-text-color">Untouched Ammo</span></td>
+                        <td>4.9%</td>
+                        <td>5.4%</td>
+                        <td>Yes</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td><span class="text-rare-text-color">Elixir Efficacy</span></td>
+                        <td>5.9%</td>
+                        <td>5.9%</td>
+                        <td>Yes</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td><span class="text-exotic-text-color">Faster Winded Recovery</span></td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>Yes</td>
+                    </tr>
+                    <tr class="odd:bg-dark-gray-2">
+                        <td><span class="text-exotic-text-color">Tenacity (Damage Over Time)</span></td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>Yes</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- ========== ========== ========== ========== ==========
+    Ethereal Gear Only Attribute Tables
+    ========== ========== ========== ========== ========== -->
+    <section class="w-full my-12 lg:px-0 flex flex-col items-center">
+        <div class="w-full px-2 py-6 flex flex-col items-center gap-6 rounded
+            2xl:max-w-section-width lg:px-16">
+
+            <!-- ==========
+            section header
+            ========== -->
+            <h2 id="ethereal-gear" class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Ethereal Gear Only Attribute Tables</h2>
+            <hr class="w-full h-[2px] bg-stone-600 border-0">
+
+            <p class="px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
+                Attributes within a table conflict with other attributes in that same table. Attributes in the No Conflict Table 
+                do not conflict with each other. 
+            </p>
+
+            <!-- ==========
+            Damage Attributes
+            ========== -->
+            <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Damage Attributes</h3>
+            <div class="place-self-start md:place-self-center overflow-hidden rounded-xl">
+                <table class="bg-dark-gray border-collapse border border-solid border-stone-900 text-slate-300 text-xl font-tinos">
+                    <!-- ==========
+                    Header
+                    ========== -->
+                    <tr>
+                        <th rowspan="2">Attribute</th>
+                        <th colspan="2">Familiarity</th>
+                        <th rowspan="2">
+                            <div class="flex flex-col items-center gap-1">
+                                Inheritable ?
+                                <img src="./img/inherit_icon.png" alt="inherit icon">
+                            </div>
+                        </th>
+                    </tr>
+                    <tr>
+                        <th>0</th>
+                        <th>999</th>
+                    </tr>
+
+                    <!-- ==========
+                    Table Data
+                    ========== -->
+
+                </table>
+            </div>
         </div>
     </section>
 
